// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move can move questions between blocks: #0 initial state 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #1 move c-1 to a-3 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
        "key": "b49bb70b-f9dd-40d2-b62e-8b7a38104745",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #2 move c-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
        "key": "2ed6853f-fb17-4ec4-9749-b19ff781b8de",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
        "key": "b49bb70b-f9dd-40d2-b62e-8b7a38104745",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #3 move b-1 to c-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "blaa",
        "id": "qf",
        "key": "7aa64997-d0d3-48fb-a6f0-175aaf60cfb2",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
        "key": "2ed6853f-fb17-4ec4-9749-b19ff781b8de",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
        "key": "b49bb70b-f9dd-40d2-b62e-8b7a38104745",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move questions between blocks: #4 move d-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
        "key": "9ea9da00-0858-4975-af4c-ecccc178869e",
      },
      Object {
        "content": "blaa",
        "id": "qf",
        "key": "7aa64997-d0d3-48fb-a6f0-175aaf60cfb2",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
        "key": "2ed6853f-fb17-4ec4-9749-b19ff781b8de",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
        "key": "b49bb70b-f9dd-40d2-b62e-8b7a38104745",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [],
  },
]
`;

exports[`move can reorder questions within blocks 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
      Object {
        "content": "blu",
        "id": "qb",
        "key": "df288f28-ddf6-467e-aac6-a41ae2ddbc67",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
    ],
  },
  Object {
    "id": "bd",
    "questions": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;
